[TASK] Fix size and alignment of breadcrumb and top navigation

--- a/Resources/Private/Source/assets/less/top.less
+++ b/Resources/Private/Source/assets/less/top.less
@@ -10,7 +10,7 @@
   li {
     line-height: 1em;
     a {
-      font-size: .8em;
+      font-size: 0.9em;
       color: @gp_font_color;
 
     }
@@ -71,6 +71,8 @@ ol.breadcrumb {
     color: #cccccc;
     .glyphicon_before();
     content: "\e072";
+    line-height: 1.5em;
+    vertical-align: text-top;
   }
   li:first-child {
     &:before {
